--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
 }
 
-.welecome-page01{
+.welecome-page01 {
     background-image: url('./assets/project-demo-bg-img.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     transform: scaleX(-1);
 }
-.welecome-page{
+
+.welecome-page {
     background-image: url('./assets/project-demo-bg2-img.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
-.NavContain01{
+
+.NavContain01 {
     background-repeat: 0;
     background-position: 0;
     background-size: 0;
     transform: scaleX(-1);
 }
-.NavContain{
+
+.NavContain {
     background-repeat: 0;
     background-position: 0;
     background-size: 0;
 }
 
-.finishButton{
+.finishButton {
     transition: all 0.5s ease-in-out;
+}
+
+
+
+.shareIcon{
+    transform: translateX(-50px) scale(2);
+    transition: all 0.4s ease-out;
+    visibility: hidden;
+}
+.shareContainer:hover .shareIcon{
+    transform: translateX(0);
+    transition: all 0.4s ease;
+    visibility: visible;
 }
